--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,5 +1,2 @@
 ---
-- src: https://github.com/iroquoisorg/ansible-role-apache.git
-  name: apache
-  version: master
-  scm: git
+- src: iroquoisorg.apache
