--- a/tests/test.yml
+++ b/tests/test.yml
@@ -5,5 +5,5 @@
     apache_vhost_host: "site.example.com"
     apache_vhost_web_root: "/var/www/"
   roles:
-    - apache
+    - iroquoisorg.apache
     - ansible-role-apache_vhost
