--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,7 +2,7 @@
 - name: restart apache
   service:
     name: apache2
-    enabled: yes
+    enabled: true
     state: restarted
 
 - name: reload apache
