--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -6,4 +6,4 @@
     apache_vhost_host: "site.example.com"
     apache_vhost_web_root: "/var/www/"
   roles:
-    - role: ansible-role-apache
+    - role: ansible-role-apache_vhost
